# Radar

RDK-TOOLS-SW/Firmware/: CHANGELOG.txt
RDK-TOOLS-SW/SDK/: CMakeLists.txt  README.md  VERSION
RDK-TOOLS-SW/SDK/apps/c/common/: app_common.c  app_common.h  json.cpp  json.h  json.hpp
RDK-TOOLS-SW/SDK/apps/c/constant_wave/: CMakeLists.txt  app_constant_wave.c  constant_wave_defaults.h
RDK-TOOLS-SW/SDK/apps/c/presence_detection/: app_presence_detection.c
RDK-TOOLS-SW/SDK/apps/c/raw_data/: CMakeLists.txt  app_raw_data.c  raw_data_defaults.h
RDK-TOOLS-SW/SDK/apps/c/rdm/: app_rdm.c
RDK-TOOLS-SW/SDK/apps/c/recorder/: app_recorder.c
RDK-TOOLS-SW/SDK/apps/c/segmentation/: CMakeLists.txt  app_segmentation.c
RDK-TOOLS-SW/SDK/apps/matlab/examples/: presence_detection.m
RDK-TOOLS-SW/SDK/apps/py/examples/: ReadMe.txt  distance_fft.py  doppler.py  functions.py  kalman.py  kalman2.py  presence_detection.py  range-angle-map.py  static_distance.py  tryout.py
RDK-TOOLS-SW/SDK/doc/html/: 2_d_m_t_i_8h.html  2_d_m_t_i_8h.js  2_d_m_t_i_8h__incl.map  2_d_m_t_i_8h__incl.md5  _algo_8h.html  _algo_8h__incl.map  _algo_8h__incl.md5  _angle_capon_8h.html  _angle_capon_8h.js  _angle_capon_8h__incl.map  _angle_capon_8h__incl.md5  _angle_monopulse_8h.html  _angle_monopulse_8h.js  _angle_monopulse_8h__incl.map  _angle_monopulse_8h__incl.md5  _avian_8h.html  _avian_8h__dep__incl.map  _avian_8h__dep__incl.md5  _avian_8h__incl.map  _avian_8h__incl.md5  _base_8h.html  _base_8h__dep__incl.map  _base_8h__dep__incl.md5  _base_8h__incl.map  _base_8h__incl.md5  _complex_8h.html  _complex_8h__dep__incl.map  _complex_8h__dep__incl.md5  _complex_8h__incl.map  _complex_8h__incl.md5  _constant_wave_control_8h.html  _constant_wave_control_8h.js  _constant_wave_control_8h__dep__incl.map  _constant_wave_control_8h__dep__incl.md5  _constant_wave_control_8h__incl.map  _constant_wave_control_8h__incl.md5  _cube_8h.html  _cube_8h.js  _cube_8h__dep__incl.map  _cube_8h__dep__incl.md5  (+424 more)
RDK-TOOLS-SW/SDK/doc/html/search/: all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_2.js  all_3.js  all_4.js  all_5.js  (+97 more)
RDK-TOOLS-SW/SDK/libs/win32_x64/: radar_sdk.lib  sdk_radar_segmentation.lib
RDK-TOOLS-SW/SDK/scripts/cmake/: c_flags_overrides.cmake
RDK-TOOLS-SW/SDK/sdk/c/ifxAvian/: Avian.h  CMakeLists.txt  ConstantWaveControl.cpp  ConstantWaveControl.h  DeviceCalc.c  DeviceConfig.h  DeviceControl.cpp  DeviceControl.h  DeviceControlAvian.cpp  DeviceControlWrappers.cpp  DummyRadarDevice.cpp  Metrics.cpp  Metrics.h  RadarDevice.cpp  RadarDeviceBase.cpp  RawDataFifo.cpp
RDK-TOOLS-SW/SDK/sdk/c/ifxAvian/internal/: DeviceCalc.h  DeviceControlAvian.hpp  DummyRadarDevice.hpp  RadarDevice.hpp  RadarDeviceBase.hpp
RDK-TOOLS-SW/SDK/sdk/c/ifxRadar/: AngleCapon.c  AngleCapon.h  AngleMonopulse.h  CMakeLists.txt  DBF.c  DBF.h  DeInterleaver.cpp  PeakSearch.c  PeakSearch.h  PresenceSensing.c  PresenceSensing.h  RangeAngleImage.c  RangeAngleImage.h  RangeDopplerMap.c  RangeDopplerMap.h  RangeSpectrum.c  RangeSpectrum.h  SDK.h  SpectrumAxis.h
RDK-TOOLS-SW/SDK/sdk/c/ifxRadarDeviceCommon/: CMakeLists.txt  RadarDeviceCommon.cpp  RadarDeviceCommon.h
RDK-TOOLS-SW/SDK/sdk/c/ifxRadarDeviceCommon/internal/: RadarDeviceCommon.hpp  RfShieldEeprom.cpp  RfShieldEeprom.hpp
RDK-TOOLS-SW/SDK/tools/bgt60-configurator-cli/: CMakeLists.txt  bgt60-configurator-cli.cpp
RDK-TOOLS-SW/SDK/tools/flashing/: CMakeLists.txt  build_flash_library_package.bat
RDK-TOOLS-SW/SDK/tools/flashing/src/: FlashRadar.cpp  FlashRadar.h  findComPort.cpp
RDK-TOOLS-SW/ifxdaq/Documentation/: .buildinfo
RDK-TOOLS-SW/ifxdaq/Documentation/.doctrees/: api.doctree  changelog.doctree  contributing.doctree  daqkit.doctree  environment.pickle  file_format.doctree  index.doctree  install.doctree  label.doctree  readme_code.doctree  readme_description.doctree  recorder.doctree  troubleshooting.doctree  tutorials.doctree
(+124 files in other folders)
